--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.application.name=mini-shopify
+spring.profiles.active=local
 spring.datasource.url=jdbc:postgresql://db.eckelaopkyqijqgkdibs.supabase.co:5432/postgres?sslmode=require
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
-spring.datasource.password=${{ DB_PASSWORD })
+spring.datasource.password=${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 spring.h2.console.enabled=true
 spring.jpa.show-sql=true
