--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,7 @@
 spring.application.name=mini-shopify
-spring.datasource.url=jdbc:postgresql://db.eckelaopkyqijqgkdibs.supabase.co:5432/postgres?sslmode=require
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.username=postgres
-spring.datasource.password=${{ DB_PASSWORD })
+spring.datasource.url=jdbc:h2:file:./data/mini-shopify
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 spring.h2.console.enabled=true
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
