--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=mini-shopify
 spring.profiles.active=local
-spring.datasource.url=jdbc:postgresql://db.eckelaopkyqijqgkdibs.supabase.co:5432/postgres?sslmode=require
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.username=postgres
-spring.datasource.password=${DB_PASSWORD}
-spring.jpa.hibernate.ddl-auto=update
 spring.h2.console.enabled=true
-spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.url=jdbc:postgresql://aws-1-ca-central-1.pooler.supabase.com:5432/postgres
+spring.datasource.username=postgres.eckelaopkyqijqgkdibs
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
